@@ -221,6 +221,18 @@ Complete list of settings that you can put into ``testenv*`` sections:
    invocation environment) can define additional space-separated variable
    names that are to be passed down to the test command environment.
 
+.. confval:: env_path_vars=CSV
+
+   .. versionadded:: N/A
+
+   A list of environment variables names which contains system paths.
+   If name is included in this list and it is set somewhere in config
+   by using `setenv` command, path separators used in declaration would
+   be converted before setting actual environment variable.
+
+   Allows to use same `setenv` declarations on both Windows (separator:
+   `;`) and Unix (separator: `:`) systems.
+
 .. confval:: recreate=True|False(default)
 
     Always recreate virtual environment if this option is True.
